Fixed some syntax issues for heroku's ruby version (1.9.1)

--- a/app/views/home/_signup_form.slim
+++ b/app/views/home/_signup_form.slim
@@ -43,4 +43,4 @@
   - unless hide_captcha
     = render 'shared/recaptcha'
   
-  = f.submit t'sign_up.sign_up' , :class => 'pretty-button'
+  = f.submit t('sign_up.sign_up'), :class => 'pretty-button'
