--- a/app/views/widgets/informed/email_panel.slim
+++ b/app/views/widgets/informed/email_panel.slim
@@ -30,7 +30,7 @@ h1 = @company.name
         br
         textarea rows=12 cols=70 name="content" = @old_content
         br
-        = submit_tag t'builder.email_panel.send', :class => 'lfloat'
+        = submit_tag t('builder.email_panel.send'), :class => 'lfloat'
         .load-box style="padding-top: 3px; display:none"
           div.loader.lfloat style="margin:2px 4px 0 5px"
           span.success =t'builder.email_panel.sending'
