--- a/app/views/widgets/informed/text_panel.slim
+++ b/app/views/widgets/informed/text_panel.slim
@@ -32,5 +32,5 @@ h1 = @company.name
         = submit_tag t'builder.text_panel.send', :class => 'lfloat'
         .load-box style="padding-top: 3px; display:none"
           div.loader.lfloat style="margin:2px 4px 0 5px"
-          span.success =t'builder.email_panel.sending'
+          span.success =t('builder.email_panel.sending')
         .clearfix
