Fixed another syntax error.

--- a/app/views/shared/_header-signin-form_new.slim
+++ b/app/views/shared/_header-signin-form_new.slim
@@ -19,6 +19,6 @@
             = check_box_tag 'user[remember_me]', :tabindex => 4
           .signin-lighttext.remember  =t'sign_in.remember_user'
         td.signin-lighttext
-          a.signin-lighttext  href="/users/password/new" =t('sign_in.forgot_password'), :tabindex => 5
+          a.signin-lighttext  href="/users/password/new" tabindex="5" =t('sign_in.forgot_password')
 
 
