--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -242,8 +242,11 @@ p {
   display: none; }
 
 .aritcaptcha-container {
-  height: 60px;
+  min-height: 60px;
+  max-height: 80px;
   margin-bottom: 4px; }
+  .aritcaptcha-container label {
+    display: block; }
   .aritcaptcha-container input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; }
