--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -276,8 +276,10 @@ p {
   display: none; }
 
 .aritcaptcha-container {
-  height: 60px;
+  min-height: 60px;
+  max-height: 80px;
   margin-bottom:4px;
+  label { display: block; }
   input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; } }
