--- a/app/views/home/why_mobile.html
+++ b/app/views/home/why_mobile.html
@@ -2,12 +2,16 @@
 <div id="why_mobile" class="yomobi-info-page">
 
 <h1>Having a mobile-optimized site is important.<h1>
-<h2>When you don't have a mobile site:</h2>
+<h2>When you  <span class="hilite-good">do</span> have a mobile site:</h2>
 <ul>
-<li><span class="hilite">Existing customers are frustrated and you lose revenue opportunity.</span></li>
-<li><span class="hilite">Your new customer reach shrinks</span> because more people browse the web on their phones.</li>
-<li><span class="hilite">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
-<li><span class="hilite">57% of your customers won't recommend you</span> if you have a bad mobile site.</li>
+<li>Case studies show a <span class="hilite-good">250% increase in visitor-to-customer conversion</span> rates with a mobile optimized website.</li>
+</ul>
+<h2>When you  <span class="hilite-warning">don't</span> have a mobile site:</h2>
+<ul>
+<li><span class="hilite-warning">Existing customers are frustrated and you lose revenue opportunity.</span></li>
+<li><span class="hilite-warning">Your new customer reach shrinks</span> because more people browse the web on their phones.</li>
+<li><span class="hilite-warning">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
+<li><span class="hilite-warning">57% of your customers won't recommend you</span> if you have a bad mobile site.</li>
 </ul>
 <br/>
 <hr/>
