--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -170,6 +170,9 @@ p {
     font-style: italic;
     line-height: 1em;
   }
+  .banner-wrap {
+    text-align: center;
+  }
   img.banner {
     //width: 100%;
     max-width: 100%;
