--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -333,6 +333,13 @@ script.customize(type="text/template")
               td
                 a.remove-banner-link href="#" =t'dialog.add_new.remove_picture'
               | <%   } %>
+            tr.banner_size class="<% if (banner_src === g.blankImg) { print('hide'); } %>"
+              td colspan="2"
+                label Banner Size:
+                select name="banner_size"
+                  option value="auto" Original
+                  - (1..10).each do |i|
+                    option value="#{i*10}%" #{i*10}%
             | <% } else { %>
             tr
               td = t'builder.customize.not_premium'
