Added language links to footers. Closes #260

--- a/app/views/shared/_footer-links_new.html.erb
+++ b/app/views/shared/_footer-links_new.html.erb
@@ -7,5 +7,6 @@
     <a href="http://help.yomobi.com" class="footerlink"><%=t'links.help'%></a><br />
     <%=t'legal.rights_reserved'%>
   </div>
+  <%= render 'shared/language-links' %>
 </div>
 
