--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -2,25 +2,27 @@ script type="text/javascript" var _RSITE = 'http://www.yomobi.com/yomobi';
 script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redirect.js"
 
 .menumain
-  .menu-corner1
-  .menu-bg
-    ul.menu-ul
-      li.menu-li
-        a.menulink href=root_path =t('links.home')
-      li.menu-li
-        a.menulink href=about_path =t('links.about')
-      li.menu-li
-        a.menulink href=why_mobile_path =t('links.mobile_matters')
-      li.menu-li
-        a.menulink href=plans_path =t('links.plans')
-      li.menu-li
-        a.menulink href=opportunity_path =t('links.opportunities')
-      li.menu-li
-        a.menulink target="ym" href="http://help.yomobi.com" =t('links.help')
+  ul.menu-ul
+    li.menu-li
+      a.menulink href=root_path =t('links.home')
+    li.menu-li
+      a.menulink href=about_path =t('links.about')
+    li.menu-li
+      a.menulink href=why_mobile_path =t('links.mobile_matters')
+    li.menu-li
+      a.menulink href=plans_path =t('links.plans')
+    li.menu-li
+      a.menulink href=opportunity_path =t('links.opportunities')
+    li.menu-li
+      a.menulink target="ym" href="http://help.yomobi.com" =t('links.help')
 
-    = render :partial => 'builder/social-share-new'
+  = render :partial => 'builder/social-share-new'
 
-  .menu-corner2
+.menulang
+  ul.lang-ul
+    li.lang-li
+      a.langlink href="?locale=en" English
+      a.langlink href="?locale=es" Español
 
 .main-whitebg
   .header-main
