--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -364,6 +364,17 @@ p.success {
     margin: 5px 30px 0 0;
     a, a:visited { color: #000; }
   }
+  .languages {
+    float: right;
+    list-style: none;
+    margin: 8px 25px 0 0;
+    padding: 8px 10px 12px 0;
+    border-top: 1px solid #b3b3b3;
+    li {
+      float: left;
+      margin: 0 0 0 10px;
+    }
+  }
 }
 
 
