--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -495,6 +495,12 @@ div.wysiwyg ul.toolbar {
   white-space: nowrap;
   clear: left;
 }
+.wphoto-wrap .selected-file.no-anim {
+  transition-duration: 0;
+  -moz-transition-duration: 0;
+  -webkit-transition-duration: 0;
+  -o-transition-duration: 0;
+}
 
 #dialog-confirm .wphoto-wrap {
   padding: 0px 4px 0px 4px;
