--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -329,8 +329,8 @@ script.customize(type="text/template")
                 .selected-file.lfloat &nbsp;
                 button name="pick_files" =t'dialog.add_new.browse'
                 .error
-              td class="<% if (banner_src === g.blankImg) { print('hide'); } %>"
-                a.remove-banner-link href="#" =t'dialog.add_new.remove_picture'
+              td
+                a.remove-banner-link href="#" class="<% if (banner_src === g.blankImg) { print('hide'); } %>" = t'dialog.add_new.remove_picture'
             tr.banner_size class="<% if (banner_src === g.blankImg) { print('hide'); } %>"
               td colspan="2"
                 label Banner Size:
@@ -410,8 +410,8 @@ script.customize(type="text/template")
                 .selected-file.lfloat &nbsp;
                 button name="pick_files" =t'dialog.add_new.browse'
                 .error
-              td class="<% if (body_bg_src === g.blankImg) { print('hide'); } %>"
-                a.remove-body_bg-link href="#" =t'dialog.add_new.remove_picture'
+              td
+                a.remove-body_bg-link href="#" class="<% if (body_bg_src === g.blankImg) { print('hide'); } %>" = t'dialog.add_new.remove_picture'
             tr.bg_repeat class="<% if (body_bg_src === g.blankImg) { print('hide'); } %>"
               td colspan="2"
                 select name="body_bg_repeat"
