Allow admins to manage site domains. Closes #258

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -147,8 +147,8 @@
       p == t 'site_manager.not_premium_for_domains'
       | <% } else { %>
       ul.domains.fancy-selectable
-      button.add-domain    disabled="disabled" =t'site_manager.add_domain'
-      button.remove-domain disabled="disabled" =t'site_manager.remove_domain'
+      button.add-domain    =t'site_manager.add_domain'
+      button.remove-domain =t'site_manager.remove_domain'
       | <% } %>
       .clearfix
 
