--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -174,6 +174,9 @@ td.top {
 	border:none;
 	/* padding-left:5px; */
 	/* color:#ffba00; */
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 .signin-lighttext {
 	font-size:11px;
